Fix mobile logo alignment: set width to auto

--- a/style.css
+++ b/style.css
@@ -1738,6 +1738,7 @@ button {
   /* Header Logo Mobile - Large and Aligned Left */
   .header__logo-img {
     height: 90px;
+    width: auto;
     margin-left: 0;
   }
 
